--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,313 @@
-# General
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*.log
-*.sqlite3
+*$py.class
 
-# Virtual Envs
-venv/
-backend/venv/
-.env
-*.env
+# C extensions
+*.so
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Python tools
-*.egg-info/
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
 .eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
 pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Virtual environments
+venv/
+ENV/
+env/
+.venv/
+.ENV/
+.env/
+
+.env
 
 # Alembic
-alembic/versions/*.pyc
-alembic/versions/__pycache__/
+alembic/versions/*.py
+!alembic/versions/__init__.py
 
-# Node (si usás frontend)
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# ===================================
+# NODE.JS / FRONTEND
+# ===================================
+# Dependencies
 node_modules/
-dist/
-build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+storybook-static
+
+# Vite
+dist-ssr
+*.local
+
+# ===================================
+# ENVIRONMENT & CONFIG FILES
+# ===================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.staging
+
+# ===================================
+# DATABASE
+# ===================================
+*.db
+*.sqlite
+*.sqlite3
+
+# ===================================
+# DOCKER
+# ===================================
+# Docker volumes
+docker-compose.override.yml
+
+# ===================================
+# UPLOADS & STORAGE
+# ===================================
+# User uploaded files
+uploads/
+storage/
+temp/
+public/uploads/
+public/temp/
+
+# Processed media
+thumbnails/
+processed/
+original/
+
+# ===================================
+# LOGS
+# ===================================
+logs/
+*.log
+
+# ===================================
+# OS GENERATED FILES
+# ===================================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.target
+.sts4-cache
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ===================================
+# IDE / EDITORS
+# ===================================
+# VSCode
+.vscode/
+*.code-workspace
+
+# IntelliJ / PyCharm
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# ===================================
+# SECURITY & SECRETS
+# ===================================
+# API keys and secrets
+.secrets
+secrets.json
+*.pem
+*.key
+*.crt
+
+# JWT keys
+private_key.pem
+public_key.pem
+
+# ===================================
+# MEDIALAB SPECIFIC
+# ===================================
+# Backup files
+*.backup
+*.bak
+
+# Migration backups
+migrations_backup/
+
+# Test files
+test_uploads/
+test_data/
+
+# SSL certificates (development)
+ssl/
+certs/
+
+# Redis dump
+dump.rdb
+
+# ===================================
+# TEMPORARY FILES
+# ===================================
+tmp/
+temp/
+.tmp/
+.temp/
