--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,9 @@ certifi==2025.4.26
 cffi==1.17.1
 click==8.2.1
 cryptography==45.0.4
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
 greenlet==3.2.3
 h11==0.16.0
@@ -24,14 +27,20 @@ pillow==11.2.1
 pillow-avif-plugin==1.5.2
 Pillow-SIMD==9.5.0.post2
 pillow_heif==0.22.0
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 PyMySQL==1.1.1
+pyotp==2.9.0
 python-dotenv==1.1.0
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+qrcode==8.2
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
