--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,20 +8,26 @@ certifi==2025.4.26
 cffi==1.17.1
 click==8.2.1
 cryptography==45.0.4
+Deprecated==1.2.18
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.12
+geographiclib==2.0
+geopy==2.4.1
 greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+limits==5.2.0
 Mako==1.3.10
 MarkupSafe==3.0.2
+netaddr==1.3.0
 numpy==2.3.0
 opencv-python-headless==4.11.0.86
+packaging==25.0
 passlib==1.7.4
 pillow==11.2.1
 pillow-avif-plugin==1.5.2
@@ -42,12 +48,17 @@ qrcode==8.2
 redis==5.0.1
 rsa==4.9.1
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+user-agents==2.2.0
 uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+wrapt==1.17.2
